resources/css/style.css
/* CSS DIRECTORY
    1. =GLOBAL STYLING
    2. =NAV
    3. =TITLE
    4. =VISION
    5. =FLAGSHIPS
    6. =TAPLIST
    7. =BREWSONDECK
    8. =INSTAFEED
    9. =ABOUTUS
    10.=EVENTS
    11.=FORM
    12.=FOOTER
    13.=ANIMATIONS
*/

/* ====================
   ===GLOBAL STYLING===
   ==================== */

:root {
  --scrollbarBG: rgba(207, 216, 220, 0.25);
  --thumbBG: rgba(190, 189, 189, 0.75);
  --thumbBGTransparent: rgba(144, 164, 174, 0.25);
  --siteBG: rgb(97, 97, 97);
  --beerCardColor: rgb(190, 190, 190, 0.75);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  /* text */
  color: white;
  font-family: "Merriweather", "Arial", serif;
  font-weight: 300;
  font-size: 20px;
  text-rendering: optimizeLegibility;
  /* display */
  display: flex;
  flex-direction: column;
  justify-content: center;
  z-index: -5;
  overflow-x: hidden;
  scroll-behavior: smooth;
  /* background */
  background-color: var(--siteBG);
  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.5)),
    url(img/site_background.jpg);
  background-position: 30%;
  background-size: cover;
  background-attachment: fixed;
}

section {
  width: 100%;
  height: 100vh;
  display: flex;
  margin-top: 20px;
}

.hidden {
  display: none;
}

/* ==========
   ===NAV===
   ========== */

/* ============
   ===TITLE===
   ============ */
.section-title {
  margin-top: 0px;
  justify-content: space-between;
  position: relative;
  overflow: hidden;
}

/* Header */
h1 {
  font-family: "Fredericka the Great", "Arial", cursive;
  top: 20%;
  font-weight: lighter;
  color: white;
  font-size: 550%;
  text-align: center;
  position: relative;
  width: fit-content;
  /* text-shadow: rgb(255, 214, 48) 1px 0 10px; */
  text-shadow: rgba(255, 255, 255, 0.548) 1px 0 10px;
}

h1 span {
  color: white;
  text-shadow: #fc0 1px 0 30px;
  left: -4%;
  z-index: 2;
  font-size: 50%;
  font-weight: 500;
  transform: rotate(0.9turn);
  position: absolute;
}

/* Slideshow Photos */
.title-slide {
  width: 100%;
  height: 100vh;
  position: absolute;
  overflow: hidden;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  transition: 1.5s;
  transition-timing-function: ease;
  opacity: 1;
  display: block;
}

.title-slide[data-slide="1"] {
  background-color: #5f692e;
  background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
    url(img/title/title_img_1.jpg);
}

.title-slide[data-slide="2"] {
  background-color: #765336;
  background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
    url(img/title/title_img_2.jpg);
}

.title-slide[data-slide="3"] {
  background-color: #6d6b4e;
  background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
    url(img/title/title_img_3.jpg);
}

.js--title-hidden {
  opacity: 0;
  transition-duration: 1.5s;
  transition-timing-function: ease;
}

/* Slideshow Buttons */
.section-title button {
  color: rgba(255, 255, 255, 0.486);
  background-color: transparent;
  border: none;
  width: 5%;
  font-size: 150%;
  z-index: 1;
  transition: 0.5s;
}

.section-title button:hover {
  color: rgba(255, 255, 255);
  background-color: rgba(0, 0, 0, 0.3);
  transition: 0.5s;
}

/* This works */
/* .slideshow img {
  height: 100%;
  width: 100%;
  object-fit: cover;
  object-position: center;
} */

/* ==============
   ===VISION ===
   ============== */
h2 {
  font-size: 275%;
}

.section-vision {
  text-align: center;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.section-vision p {
  width: 500px;
  line-height: 150%;
  padding-top: 20px;
  font-size: 110%;
}

/* ================
   ===FLAGSHIPS===
   ================ */
/* General */
.section-flagships {
  height: auto;
  width: 100%;
  display: flex;
  flex-direction: column;
  padding: 20px 10px;
  background-image: linear-gradient(
    rgba(138, 135, 135, 0.212),
    rgba(138, 135, 135, 0.212)
  );
}

.section-flagships h2 {
  margin-bottom: 20px;
  align-self: center;
}

/* Beer Card Container */
.container--beer-cards-flagship {
  /* Important for Flexbox Overflow */
  /* https://stackoverflow.com/questions/21515042/scrolling-a-flexbox-with-overflowing-content */
  overflow: auto;
  display: flex;
  flex: 1;
}

/* OVERFLOWING FLEXBOX WRAPPER */
.flex-overflow-wrapper {
  display: flex;
  min-width: min-content;
  /* Scrollbar */
  scrollbar-width: thin;
  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
  width: 100%;
}

/* Overflowing flexbox horizontal scrollbar*/
.flex-overflow-wrapper::-webkit-scrollbar {
  height: 15px;
}

.flex-overflow-wrapper::-webkit-scrollbar-thumb:hover {
  background-color: var(--thumbBG);
}

.flex-overflow-wrapper::-webkit-scrollbar-track {
  background: var(--scrollbarBG);
  border-radius: 6px;
}
.flex-overflow-wrapper::-webkit-scrollbar-thumb {
  background-color: var(--thumbBGTransparent);
  border-radius: 6px;
}

/* BEER CARD - FLAGSHIP */
.beer-card--flagship {
  /* Grid */
  display: inline-grid;
  grid-template-columns: 2fr 1fr 1fr;
  grid-template-rows: 0.25fr 0.8fr 0.6fr 2.75fr 0.4fr 0.4fr 0.4fr 0.4fr 0.3fr;
  /* grid-template-rows: 0.8fr 0.1fr 0.6fr 2.75fr 0.4fr 0.4fr 0.4fr 0.4fr 0.3fr; */
  /* grid-template-rows: 58px 0.5fr 2.75fr 0.4fr 0.4fr 0.4fr 0.4fr 0.3fr; */
  /* Styling */
  background-image: linear-gradient(
    rgba(175, 174, 174, 0.4),
    rgba(138, 135, 135, 0.5)
  );
  height: 325px;
  width: 650px;
  margin: 0px 10px 5px 10px;
  border-radius: 15px;
}

/* Beer Card Image - Flagship */
.beer-card--image-container {
  grid-column-start: 1;
  grid-row-start: 1;
  grid-row-end: 4;
  position: relative;
}

.beer-card--image {
  height: 300px;
  margin: 10px;
  border-radius: 15px;
  border: 3px solid white;
  box-shadow: 2px 5px 5px black;
  position: absolute;
}

.beer-card--image-icon {
  position: absolute;
  top: 15%;
  left: 5%;
  height: 60px;
  width: 60px;
  background-position: center;
  background-size: contain;
}

.award-text {
  font-size: 60%;
  visibility: hidden;
  background-color: rgba(0, 0, 0, 0.25);
  color: #fff;
  text-align: center;
  padding: 5px 0;
  border-radius: 6px;
  position: absolute;
  width: 150px;
  top: 10%;
  left: 100%;
}

.beer-card--image-icon:hover {
  filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.5));
}

.beer-card--image-icon:hover .award-text {
  visibility: visible;
}

/* Beer Card - Flagship - Attributes */
.beer-card--flagship h3 {
  grid-row-start: 2;
  grid-column-start: 2;
  grid-column-end: 4;
  place-self: center center;
  text-align: center;
  font-weight: lighter;
  font-size: 120%;
}

.beer-card--description {
  font-size: 75%;
  line-height: 135%;
  grid-row-start: 4;
}

.beer-card--abv-ibu,
.beer-card--style {
  font-size: 80%;
  place-self: center center;
  font-style: italic;
  grid-row-start: 3;
  text-align: center;
}

.beer-card--description {
  grid-column-start: 2;
  grid-column-end: 4;
  margin: 5px 10px;
  text-align: center;
}

.beer-card--ingredients-icon {
  height: 18px;
  width: 18px;
  background-position: center;
  background-size: contain;
  align-self: flex-start;
}

.beer-card--ingredient {
  /* Grid */
  place-self: center center;
  grid-column-start: 2;
  grid-column-end: span 2;
  /* Child Centering */
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  /* Styling */
  font-style: italic;
  font-size: 70%;
}

.beer-card--ingredient p {
  text-align: center;
}

.beer-card--malt {
  grid-row-start: 5;
}
.beer-card--hops {
  grid-row-start: 6;
}
.beer-card--yeast {
  grid-row-start: 7;
}
.beer-card--extra,
.beer-card--fruit {
  grid-row-start: 8;
}

/* ==============
   ===TAPLIST===
   ============== */

/* ==================
   ===BREWSONDECK===
   ================== */

/* ================
   ===INSTAFEED===
   ================ */

/* =============
   ===ABOUTUS===
   ============== */

/* =============
   ===EVENTS===
   ============= */

/* ===========
   ===FORM===
   =========== */

/* =============
   ===FOOTER===
   ============= */

/* =================
   ===ANIMATIONS===
   ================= */ ;

